k8s/s3proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3proxy
  namespace: aaw-fc
  labels:
    app: s3proxy
spec:
  selector:
    matchLabels:
      app: s3proxy
  template:
    metadata:
      annotations:
        data.statcan.gc.ca/inject-blob-volumes: "true"
      labels:
        app: s3proxy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: s3proxy
          image: docker.io/andrewgaul/s3proxy:sha-71541ac
          resources:
            limits:
              cpu: "0.5"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "1Gi"
          ports:
            - name: http
              containerPort: 9000
        - name: nginx
          image: docker.io/nginxinc/nginx-unprivileged:1.21-alpine
          resources:
            limits:
              cpu: "0.25"
              memory: "250Mi"
            requests:
              cpu: "0.25"
              memory: "250Mi"
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: static-files
              mountPath: /etc/nginx/html/s3/
          ports:
            - name: http
              containerPort: 8080
      volumes:
        - name: nginx-config
          configMap:
            name: s3proxy-nginx-conf
        - name: static-files
          emptyDir: {}
