k8s/s3proxy-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: s3-virtualservice
  namespace: aaw-fc
spec:
  exportTo:
    - aaw-fc
    - istio-system
    - ingress-general-system
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'  # TODO: change this to the relevant hosts
  http:
  #      _        _   _         __ _ _
  #  ___| |_ __ _| |_(_) ___   / _(_) | ___  ___
  # / __| __/ _` | __| |/ __| | |_| | |/ _ \/ __|
  # \__ \ || (_| | |_| | (__  |  _| | |  __/\__ \
  # |___/\__\__,_|\__|_|\___| |_| |_|_|\___||___/
  # Requests for static files have prefix /s3/aaw-fc/
  - match:
    - uri:
        prefix: /s3/aaw-fc/
    name: s3-route-s3proxy-requests
    route:
    - destination:
        host: s3proxy-web.aaw-fc.svc.cluster.local
        port:
          number: 80
  # Initial redirect for index.html page
  - match:
    - headers:
        referer:
          exact: https://kubeflow.aaw-dev.cloud.statcan.ca/_/s3/?ns=aaw-fc
    - headers:
        referer:
          exact: https://kubeflow.aaw.cloud.statcan.ca/_/s3/?ns=aaw-fc
    name: s3-uri-redirect
    redirect:
      uri: /s3/aaw-fc/index.html
  #  ____ _____ ____                                                       _
  # / ___|___ /|  _ \ _ __ _____  ___   _   _ __ ___  __ _ _   _  ___  ___| |_ ___
  # \___ \ |_ \| |_) | '__/ _ \ \/ / | | | | '__/ _ \/ _` | | | |/ _ \/ __| __/ __|
  #  ___) |__) |  __/| | | (_) >  <| |_| | | | |  __/ (_| | |_| |  __/\__ \ |_\__ \
  # |____/____/|_|   |_|  \___/_/\_\\__, | |_|  \___|\__, |\__,_|\___||___/\__|___/
  #                                 |___/               |_|
  - match:
    # Note: In Istio having multiple list items under match has OR semantics and having
    # multiple items in a single list item has AND semantics. This was pointed out in the
    # following GH issue: https://github.com/istio/istio/issues/16959

    # When user opens an s3 object link from inside an iframe in the Kubeflow interface,
    # the referrer url is /index.html, not /sw_modify_header.js, so need to route requests
    # from both referers to the s3proxy service in the user's namespace.
    - uri:
        prefix: /standard
      headers:
        referer:
          exact: https://kubeflow.aaw-dev.cloud.statcan.ca/s3/aaw-fc/sw_modify_header.js
    - uri:
        prefix: /standard
      headers:
        referer:
          exact: https://kubeflow.aaw.cloud.statcan.ca/s3/aaw-fc/sw_modify_header.js
    - uri:
        prefix: /standard
      headers:
        referer:
          exact: https://kubeflow.aaw-dev.cloud.statcan.ca/s3/aaw-fc/index.html
    - uri:
        prefix: /standard
      headers:
        referer:
          exact: https://kubeflow.aaw.cloud.statcan.ca/s3/aaw-fc/index.html
    name: s3-standard-bucket
    route:
    - destination:
        host: s3proxy.aaw-fc.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /premium
      headers:
        referer:
          exact: https://kubeflow.aaw-dev.cloud.statcan.ca/s3/aaw-fc/sw_modify_header.js
    - uri:
        prefix: /premium
      headers:
        referer:
          exact: https://kubeflow.aaw.cloud.statcan.ca/s3/aaw-fc/sw_modify_header.js
    - uri:
        prefix: /premium
      headers:
        referer:
          exact: https://kubeflow.aaw-dev.cloud.statcan.ca/s3/aaw-fc/index.html
    - uri:
        prefix: /premium
      headers:
        referer:
          exact: https://kubeflow.aaw.cloud.statcan.ca/s3/aaw-fc/index.html
    name: s3-premium-bucket
    route:
    - destination:
        host: s3proxy.aaw-fc.svc.cluster.local
        port:
          number: 80
